tests/regression/driver/redefinition.sv
// SPDX-FileCopyrightText: Michael Popoloski
// SPDX-License-Identifier: MIT

// The LRM requires unique identifiers within a scope; strict mode is an error.
// RUN: %slang %s 2>&1 || true
// CHECK: error:
// CHECK: Build failed

// Some tools issue only a warning; --compat=all keeps it as a warning.
// RUN: %slang %s --compat=all 2>&1
// CHECK: -Wredefinition]
// CHECK: Build succeeded

module m;
  int i;
  int i;
endmodule
